[gd_scene load_steps=4 format=3 uid="uid://ducuex5p520wp"]

[ext_resource type="Script" path="res://scripts/gravity_test_controller.gd" id="1_gclhx"]
[ext_resource type="PackedScene" uid="uid://b5exmk65lrs0v" path="res://scenes/black_hole.tscn" id="2_bjwv3"]
[ext_resource type="PackedScene" uid="uid://bwd1ajpap6kfd" path="res://scenes/planet.tscn" id="3_bpyfn"]

[node name="GravityTestController" type="Node2D"]
position = Vector2(366, 330)
script = ExtResource("1_gclhx")

[node name="BlackHole1" parent="." instance=ExtResource("2_bjwv3")]
unique_name_in_owner = true
position = Vector2(708, 408)

[node name="BlackHole2" parent="." instance=ExtResource("2_bjwv3")]
unique_name_in_owner = true
position = Vector2(1314, 750)

[node name="BlackHole3" parent="." instance=ExtResource("2_bjwv3")]
unique_name_in_owner = true
position = Vector2(1896, 210)

[node name="EndPlanet" parent="." instance=ExtResource("3_bpyfn")]
unique_name_in_owner = true
position = Vector2(2466, 468)

[node name="StartPlanet" parent="." instance=ExtResource("3_bpyfn")]
unique_name_in_owner = true
position = Vector2(30, 636)
